# TodoApp

./: .gitignore  .qmlls.ini  CMakeLists.txt  main.cpp  task.cpp  task.hpp  taskdatabase.cpp  taskdatabase.hpp
resources/qml/: main.qml
src/: main.cpp  task.cpp  taskdatabase.cpp  taskdatabase.hpp  tasks.hpp
src/db/: taskdatabase.cpp  taskdatabase.hpp
src/helpers/: testhelper.hpp
src/managers/: taskmanager.cpp  taskmanager.hpp
src/model/: task.hpp
